# returnn

./: .editorconfig  .gitignore  .gitmodules  .kateconfig  .style.yapf  .travis.yml  ActivationFunctions.py  Attentions.py  BestPathDecoder.cpp  BestPathDecoder.py  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CTC.cpp  CTC.py  C_Support_Code.cpp  CachedDataset.py  CachedDataset2.py  Config.py  CustomLSTMFunctions.py  Dataset.py  Debug.py  DebugHelpers.py  Device.py  Engine.py  EngineBase.py  EngineBatch.py  EngineTask.py  EngineUtil.py  ExternMultiSprintDataset.py  ExternSprintDataset.py  External.py  FastLSTM.py  Fsa.py  FunctionLoader.py  GeneratingDataset.py  HDFDataset.py  HyperParamTuning.py  Inv.cpp  Inv.py  (+103 more)
MDLSTM/: Config.py  Dataset.py  Engine.py  Network.py  rnn.py
c_support_code/: best-path.cpp
cuda_implementation/: BiDirectionalTwoDLSTMOp.py  CropToBatchImageSizeOp.py  CuDNNConvHWBCOp.py  FractionalMaxPoolingOp.py  MultiDirectionalTwoDLSTMOp.py  OneDToTwoDOp.py  PoolHWBCOp.py  Util.py  c_support_code_common.cpp  c_support_code_cudnn.cpp  c_support_code_mdlstm.cpp
demos/: 12AX.cluster_map  _setup_returnn_env.py  demo-act-lstm.12ax.config  demo-assoc-lstm.episodiccopy.config  demo-assoc-lstm.varassign.config  demo-assoc-lstm.xml.config  demo-cluster-subnetwork.12ax.config  demo-fwd.config  demo-horovod-mpi.py  demo-horovod-mpi.py.sh  demo-horovod-mpi.sh  demo-hyper-param-tuning.config  demo-iter-dataset.py  demo-lin-rec.12ax.config  demo-list-devices.py  demo-polyn-lstm.12ax.config  demo-pretrain.config  demo-rbf-lstm.12ax.config  demo-returnn-as-framework.py  (+56 more)
(+619 files in other folders)
